# BioNEV

./: .gitignore  fullgraph.edgelist  graph_train.edgelist  setup.cfg  testing_edgelist.edgelist  training_edgelist.edgelist
src/: evaluation.py  main.py  utils.py
src/bionev/: __main__.py  cli.py  embed_train.py  evaluation.py  main.py  pipeline.py  utils.py
src/bionev/GAE/: train_model.py
src/bionev/OpenNE/: classify.py  graph.py  grarep.py  hope.py  line.py  node2vec.py  sdne.py  walker.py
src/bionev/SVD/: model.py
