#############################################
# Set up configration
#############################################
[metadata]
name = BioNEV
version = 0.0.1-dev
description = BioNEV: Biomedical Network Embedding Evaluation
long_description = file: README.rst

url = https://github.com/AldisiRana/BioNEV

license = MIT License

classifiers =

keywords = 
	NRL
	embeddings

author = 
author_email = 

[options]
#where is my code
packages = find:
package_dir =
    = src

zip_safe = false
python_requires = >= 3.6

install_requires =
	click
	numpy==1.16.3
	networkx==2.0
	scipy==0.19.1
	tensorflow==1.10.0
	gensim==3.0.1
	scikit-learn==0.19.0
	tqdm==4.28.1
	fastdtw

[options.packages.find]
where = src

